--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -70,6 +70,7 @@ set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
 set_real_ip_from 107.189.5.188;
+set_real_ip_from 107.189.5.249;
 set_real_ip_from 107.189.5.7;
 set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.141;
@@ -107,7 +108,8 @@ set_real_ip_from 109.71.252.88;
 set_real_ip_from 109.71.252.97;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 1.168.190.36;
+set_real_ip_from 1.170.223.199;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
 set_real_ip_from 119.28.139.55;
@@ -147,6 +149,7 @@ set_real_ip_from 149.102.153.38;
 set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
+set_real_ip_from 151.242.157.138;
 set_real_ip_from 152.32.181.53;
 set_real_ip_from 152.32.199.79;
 set_real_ip_from 152.32.206.127;
@@ -177,7 +180,7 @@ set_real_ip_from 163.172.45.102;
 set_real_ip_from 164.132.172.209;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
-set_real_ip_from 167.99.88.172;
+set_real_ip_from 166.88.225.109;
 set_real_ip_from 171.25.193.131;
 set_real_ip_from 171.25.193.20;
 set_real_ip_from 171.25.193.234;
@@ -571,32 +574,7 @@ set_real_ip_from 192.42.116.184;
 set_real_ip_from 192.42.116.185;
 set_real_ip_from 192.42.116.186;
 set_real_ip_from 192.42.116.19;
-set_real_ip_from 192.42.116.191;
-set_real_ip_from 192.42.116.192;
-set_real_ip_from 192.42.116.193;
-set_real_ip_from 192.42.116.194;
-set_real_ip_from 192.42.116.195;
-set_real_ip_from 192.42.116.196;
-set_real_ip_from 192.42.116.197;
-set_real_ip_from 192.42.116.198;
-set_real_ip_from 192.42.116.199;
 set_real_ip_from 192.42.116.20;
-set_real_ip_from 192.42.116.200;
-set_real_ip_from 192.42.116.201;
-set_real_ip_from 192.42.116.202;
-set_real_ip_from 192.42.116.203;
-set_real_ip_from 192.42.116.208;
-set_real_ip_from 192.42.116.209;
-set_real_ip_from 192.42.116.210;
-set_real_ip_from 192.42.116.211;
-set_real_ip_from 192.42.116.212;
-set_real_ip_from 192.42.116.213;
-set_real_ip_from 192.42.116.214;
-set_real_ip_from 192.42.116.215;
-set_real_ip_from 192.42.116.216;
-set_real_ip_from 192.42.116.217;
-set_real_ip_from 192.42.116.218;
-set_real_ip_from 192.42.116.219;
 set_real_ip_from 192.42.116.22;
 set_real_ip_from 192.42.116.23;
 set_real_ip_from 192.42.116.24;
@@ -726,20 +704,6 @@ set_real_ip_from 2001:67c:289c:4::77;
 set_real_ip_from 2001:67c:289c:4::78;
 set_real_ip_from 2001:67c:289c:4::79;
 set_real_ip_from 2001:67c:289c:4::80;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:173;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:174;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:175;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:176;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:177;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:178;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:179;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:180;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:181;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:182;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:183;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:184;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:185;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:186;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5513;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5514;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5515;
@@ -771,34 +735,10 @@ set_real_ip_from 2001:67c:e28:1::103;
 set_real_ip_from 2001:67c:e28:1::2;
 set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:67c:e28:1::4;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:191;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:192;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:193;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:194;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:195;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:196;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:197;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:198;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:199;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:200;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:201;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:202;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:203;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:208;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:209;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:210;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:211;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:212;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:213;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:214;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:215;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:216;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:217;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:7826::b;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -945,6 +885,7 @@ set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
+set_real_ip_from 217.154.21.121;
 set_real_ip_from 217.199.199.250;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.192;
@@ -1061,6 +1002,7 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
+set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1243,6 +1185,8 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
 set_real_ip_from 2a02:16d0:0:5::1;
+set_real_ip_from 2a02:2479:0:6e00::1;
+set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:898:218::1;
@@ -1569,6 +1513,7 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:44;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:64;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:92;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b00b:1337:1;
+set_real_ip_from 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b03b:1337:4;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b05b:1337:6;
@@ -1590,6 +1535,8 @@ set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0f:7803:fac5:cd0::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:5bdd::beef;
+set_real_ip_from 2a0f:ca80::1260:4bff:fea4:19b0;
+set_real_ip_from 2a0f:ca80::2e59:e5ff:fe49:3738;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
@@ -1759,6 +1706,7 @@ set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.13.225.69;
 set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.74.53;
+set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.70.158;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
@@ -1875,6 +1823,7 @@ set_real_ip_from 45.95.169.14;
 set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.252;
 set_real_ip_from 46.165.243.36;
+set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.23.109.25;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
@@ -1948,6 +1897,7 @@ set_real_ip_from 72.235.129.116;
 set_real_ip_from 77.246.98.159;
 set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
+set_real_ip_from 78.142.18.219;
 set_real_ip_from 79.100.235.29;
 set_real_ip_from 80.125.71.115;
 set_real_ip_from 80.241.60.207;
