--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -33,20 +33,6 @@ set_real_ip_from 2001:67c:289c:4::77;
 set_real_ip_from 2001:67c:289c:4::78;
 set_real_ip_from 2001:67c:289c:4::79;
 set_real_ip_from 2001:67c:289c:4::80;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:173;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:174;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:175;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:176;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:177;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:178;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:179;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:180;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:181;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:182;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:183;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:184;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:185;
-set_real_ip_from 2001:67c:6ec:203:192:42:116:186;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5513;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5514;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5515;
@@ -78,34 +64,10 @@ set_real_ip_from 2001:67c:e28:1::103;
 set_real_ip_from 2001:67c:e28:1::2;
 set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:67c:e28:1::4;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:191;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:192;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:193;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:194;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:195;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:196;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:197;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:198;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:199;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:200;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:201;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:202;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:203;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:208;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:209;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:210;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:211;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:212;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:213;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:214;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:215;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:216;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:217;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
-set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:7826::b;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -175,6 +137,7 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
+set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -356,6 +319,8 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
 set_real_ip_from 2a02:16d0:0:5::1;
+set_real_ip_from 2a02:2479:0:6e00::1;
+set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:898:218::1;
@@ -682,6 +647,7 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:44;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:64;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:92;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b00b:1337:1;
+set_real_ip_from 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b03b:1337:4;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b05b:1337:6;
@@ -703,6 +669,8 @@ set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0f:7803:fac5:cd0::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:85c1:356:5bdd::beef;
+set_real_ip_from 2a0f:ca80::1260:4bff:fea4:19b0;
+set_real_ip_from 2a0f:ca80::2e59:e5ff:fe49:3738;
 set_real_ip_from 2a0f:cdc6:500:11e3::2;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
