--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -65,6 +65,7 @@ allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
 allow 2001:67c:e28:1::4;
 allow 2001:910:1400:107::2;
+allow 2001:ac8:21:57:0:1:f6ab:cb24;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:7826::b;
 allow 2001:b030:2422::7234;
@@ -82,7 +83,6 @@ allow 2401:c080:1c02:2d4::;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
-allow 2407:1c00:6100:5640::;
 allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
@@ -104,6 +104,7 @@ allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
@@ -115,7 +116,6 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1362::2;
-allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -319,7 +319,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2479:0:6e00::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -370,6 +369,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -670,7 +670,6 @@ allow 2a0f:7803:fac5:cd0::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5bdd::beef;
 allow 2a0f:ca80::1260:4bff:fea4:19b0;
-allow 2a0f:ca80::2e59:e5ff:fe49:3738;
 allow 2a0f:cdc6:500:11e3::2;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
