--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -108,7 +108,6 @@ deny 109.71.252.88;
 deny 109.71.252.97;
 deny 113.20.31.38;
 deny 114.35.245.150;
-deny 1.170.235.164;
 deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
@@ -1235,7 +1234,6 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -1278,6 +1276,7 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+deny 2a0b:64c0:f802:1::a;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1519,6 +1518,7 @@ deny 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 deny 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 deny 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 deny 2a0e:97c0:3e3:460:1337:b20b:1337:9;
+deny 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
@@ -1556,54 +1556,6 @@ deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
-deny 2a10:1fc0:10::19eb:717b;
-deny 2a10:1fc0:10::28fc:90d4;
-deny 2a10:1fc0:10::2a17:5b54;
-deny 2a10:1fc0:10::2cf4:6ba2;
-deny 2a10:1fc0:10::2d91:1a2d;
-deny 2a10:1fc0:10::3903:457;
-deny 2a10:1fc0:10::3919:de17;
-deny 2a10:1fc0:10::3a1:5e9f;
-deny 2a10:1fc0:10::3dc5:e694;
-deny 2a10:1fc0:10::3eb3:d1d0;
-deny 2a10:1fc0:10::3ec1:2b1e;
-deny 2a10:1fc0:10::40d8:83c;
-deny 2a10:1fc0:10::42d2:f78b;
-deny 2a10:1fc0:10::5138:4dfa;
-deny 2a10:1fc0:10::5719:261d;
-deny 2a10:1fc0:10::61d9:7617;
-deny 2a10:1fc0:10::61e2:c84d;
-deny 2a10:1fc0:10::627f:3c31;
-deny 2a10:1fc0:10::694a:c359;
-deny 2a10:1fc0:10::6b4c:30fc;
-deny 2a10:1fc0:10::6c2e:469a;
-deny 2a10:1fc0:10::6d92:d6ab;
-deny 2a10:1fc0:10::6fde:4b8d;
-deny 2a10:1fc0:10::792f:38b4;
-deny 2a10:1fc0:10::895d:abf9;
-deny 2a10:1fc0:10::8a03:d023;
-deny 2a10:1fc0:10::8b78:d42e;
-deny 2a10:1fc0:10::8d4d:eca2;
-deny 2a10:1fc0:10::9a73:d4f2;
-deny 2a10:1fc0:10::9d80:c9f7;
-deny 2a10:1fc0:10::9e08:e765;
-deny 2a10:1fc0:10::a3a5:49da;
-deny 2a10:1fc0:10::a458:8b37;
-deny 2a10:1fc0:10::a63c:724c;
-deny 2a10:1fc0:10::b571:1205;
-deny 2a10:1fc0:10::bf3f:d195;
-deny 2a10:1fc0:10::c129:61a1;
-deny 2a10:1fc0:10::c385:c7fa;
-deny 2a10:1fc0:10::c7c7:2f84;
-deny 2a10:1fc0:10::d5a6:a292;
-deny 2a10:1fc0:10::d5d0:db30;
-deny 2a10:1fc0:10::d6b7:b3e9;
-deny 2a10:1fc0:10::dbe0:6173;
-deny 2a10:1fc0:10::dbe9:7852;
-deny 2a10:1fc0:10::e4c8:9020;
-deny 2a10:1fc0:10::ea87:5496;
-deny 2a10:1fc0:10::fa6c:cac5;
-deny 2a10:1fc0:10::fdb0:ba7f;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1719,6 +1671,8 @@ deny 45.138.16.248;
 deny 45.138.16.42;
 deny 45.138.16.69;
 deny 45.138.16.76;
+deny 45.139.50.202;
+deny 45.139.50.204;
 deny 45.141.215.110;
 deny 45.141.215.111;
 deny 45.141.215.114;
@@ -1820,7 +1774,6 @@ deny 46.182.21.248;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
-deny 46.249.49.183;
 deny 46.250.243.29;
 deny 46.30.188.218;
 deny 47.254.142.180;
@@ -1836,7 +1789,6 @@ deny 5.181.80.107;
 deny 5.196.95.34;
 deny 5.230.119.146;
 deny 5.253.247.27;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1919,30 +1871,6 @@ deny 84.19.182.20;
 deny 84.211.226.13;
 deny 84.239.46.144;
 deny 85.239.41.130;
-deny 85.239.55.11;
-deny 85.239.55.110;
-deny 85.239.55.112;
-deny 85.239.55.114;
-deny 85.239.55.123;
-deny 85.239.55.132;
-deny 85.239.55.168;
-deny 85.239.55.173;
-deny 85.239.55.174;
-deny 85.239.55.184;
-deny 85.239.55.189;
-deny 85.239.55.192;
-deny 85.239.55.201;
-deny 85.239.55.228;
-deny 85.239.55.230;
-deny 85.239.55.239;
-deny 85.239.55.24;
-deny 85.239.55.249;
-deny 85.239.55.25;
-deny 85.239.55.250;
-deny 85.239.55.31;
-deny 85.239.55.37;
-deny 85.239.55.51;
-deny 85.239.55.80;
 deny 85.93.218.204;
 deny 86.54.28.49;
 deny 87.118.110.27;
@@ -1987,30 +1915,6 @@ deny 91.219.236.101;
 deny 91.219.236.91;
 deny 91.219.237.39;
 deny 91.227.114.153;
-deny 91.227.77.107;
-deny 91.227.77.108;
-deny 91.227.77.119;
-deny 91.227.77.125;
-deny 91.227.77.139;
-deny 91.227.77.158;
-deny 91.227.77.160;
-deny 91.227.77.181;
-deny 91.227.77.193;
-deny 91.227.77.200;
-deny 91.227.77.208;
-deny 91.227.77.209;
-deny 91.227.77.226;
-deny 91.227.77.229;
-deny 91.227.77.237;
-deny 91.227.77.25;
-deny 91.227.77.31;
-deny 91.227.77.36;
-deny 91.227.77.44;
-deny 91.227.77.48;
-deny 91.227.77.51;
-deny 91.227.77.54;
-deny 91.227.77.62;
-deny 91.227.77.97;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
